added prod setup files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,8 @@
 spring.application.name=okr-tracker
+spring.profiles.default=dev
 
-# Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/okr_tracker_db
-spring.datasource.username=postgres
-spring.datasource.password=Pa55w0rd
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-# JPA / Hibernate
+# Common settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-# API Prefix if desired (though I put it in controllers)
 server.port=8080
