--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,3 +5,7 @@ spring.datasource.password=P0stgre5
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # It is recommended to use ddl-auto=none for production in a real application.
+
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://auth.ccc.net/auth/realms/AppsRND
+spring.security.oauth2.resourceserver.jwt.audiences=okr-tracker-backend
