--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,3 +4,9 @@ spring.datasource.username=postgres
 spring.datasource.password=Pa55w0rd
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# NEW: Keycloak/OAuth2 Resource Server Configuration (Dev)
+# Issuer URI points to your Keycloak realm's /.well-known/openid-configuration endpoint
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://keycloakrnd.ccc.net/auth/realms/AppsRND
+# A common practice is to restrict the audience
+#spring.security.oauth2.resourceserver.jwt.audiences=backend
