--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,6 +7,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # NEW: Keycloak/OAuth2 Resource Server Configuration (Dev)
 # Issuer URI points to your Keycloak realm's /.well-known/openid-configuration endpoint
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://keycloakrnd.ccc.net/auth/realms/AppsRND
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://auth.ccc.net/auth/realms/Apps
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=https://keycloakrnd.ccc.net/auth/realms/Apps
 # A common practice is to restrict the audience
 #spring.security.oauth2.resourceserver.jwt.audiences=backend
