added role based on project, fixed role assignments

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,6 +6,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # It is recommended to use ddl-auto=none for production in a real application.
 
+# Liquibase Configuration for Production
+# Liquibase is ENABLED in production to manage schema migrations
+spring.liquibase.enabled=true
+# Run migrations on startup
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://auth.ccc.net/auth/realms/AppsRND
 spring.security.oauth2.resourceserver.jwt.audiences=okr-tracker-backend
