--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,6 +5,9 @@ spring.datasource.password=Pa55w0rd
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# Liquibase Configuration - enabled to run migrations
+spring.liquibase.enabled=true
+
 # NEW: Keycloak/OAuth2 Resource Server Configuration (Dev)
 # Issuer URI points to your Keycloak realm's /.well-known/openid-configuration endpoint
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://auth.ccc.net/auth/realms/Apps
