--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,24 @@
 spring.application.name=okr-tracker
 spring.profiles.default=dev
 
-# Common settings
-spring.jpa.hibernate.ddl-auto=update
+# JPA/Hibernate Configuration
+# Use 'none' to let Liquibase manage the schema
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Liquibase Configuration
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+spring.liquibase.default-schema=public
+
+# Server Configuration
 server.port=8080
 
-spring.web.cors.allowed-origins=http://localhost:4200
+# CORS Configuration
+app.cors.origins=${CORS_ALLOWED_ORIGINS:http://localhost:4200}
+
+# File Upload Configuration
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
